[package]
name = "kwf_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 运行时
tokio = { version = "1.18.2", features = ["full"] }
# web
axum = {version = "0.5.6"}

serde = { version = "1.0.137", features = ["derive"] }
serde_json = {version="1.0.81"}